# Infotecs

./: CMakeLists.txt  README.md
program1/: CMakeLists.txt  buffer.cpp  buffer.h  consumer.cpp  consumer.h  ibuffer.h  main.cpp  producer.cpp  producer.h
program2/: CMakeLists.txt  dataprocessor.cpp  dataprocessor.h  idataprocessor.h  main.cpp  server.cpp  server.h
